@@ -1,97 +1,44 @@
 package com.utp.sistema_municipal_backend.config;
 
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.servlet.config.annotation.CorsRegistry;
-import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.util.Arrays;
 import java.util.List;
 
-/**
- * Configuración CORS unificada para toda la aplicación.
- * Esta clase centraliza toda la configuración de CORS, eliminando duplicaciones.
- */
 @Configuration
-public class CorsConfig implements WebMvcConfigurer {
+public class CorsConfig {
 
-    @Value("${app.cors.allowed-origins:http://localhost:4200,http://localhost:3000}")
-    private String[] allowedOrigins;
-
-    @Value("${app.cors.allow-credentials:true}")
-    private boolean allowCredentials;
-
-    @Value("${app.cors.max-age:3600}")
-    private long maxAge;
-
-    /**
-     * Configuración CORS global usando CorsConfigurationSource
-     * Esta configuración se aplica a nivel de Spring Security
-     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // Configurar orígenes permitidos
-        if (allowCredentials) {
-            // Si allowCredentials es true, debemos especificar orígenes exactos
-            configuration.setAllowedOrigins(Arrays.asList(allowedOrigins));
-        } else {
-            // Si no necesitamos credentials, podemos usar comodines
-            configuration.setAllowedOriginPatterns(List.of("*"));
-        }
+        // Permitir orígenes específicos
+        configuration.setAllowedOrigins(Arrays.asList(
+            "http://localhost:4200",
+            "http://localhost:3000"
+        ));
         
-        // Métodos HTTP permitidos
+        // Permitir todos los métodos HTTP
         configuration.setAllowedMethods(Arrays.asList(
-            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"
+            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
         ));
         
-        // Headers permitidos
-        configuration.setAllowedHeaders(Arrays.asList(
-            "Authorization", 
-            "Content-Type", 
-            "X-Requested-With", 
-            "Accept", 
-            "Origin", 
-            "Access-Control-Request-Method", 
-            "Access-Control-Request-Headers"
-        ));
+        // Permitir todos los headers
+        configuration.setAllowedHeaders(List.of("*"));
         
-        // Headers expuestos al cliente
-        configuration.setExposedHeaders(Arrays.asList(
-            "Authorization", 
-            "Content-Disposition"
-        ));
+        // Permitir credentials
+        configuration.setAllowCredentials(true);
         
-        // Configurar credentials
-        configuration.setAllowCredentials(allowCredentials);
+        // Exponer headers de autorización
+        configuration.setExposedHeaders(Arrays.asList("Authorization"));
         
-        // Tiempo de cache para preflight requests
-        configuration.setMaxAge(maxAge);
-        
-        // Aplicar configuración a todas las rutas
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         
         return source;
-    }
-
-    /**
-     * Configuración CORS adicional usando WebMvcConfigurer
-     * Esta configuración complementa la anterior para asegurar cobertura total
-     */
-    @Override
-    public void addCorsMappings(CorsRegistry registry) {
-        registry.addMapping("/**")
-                .allowedOriginPatterns(allowedOrigins)
-                .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD")
-                .allowedHeaders("*")
-                .exposedHeaders("Authorization", "Content-Disposition")
-                .allowCredentials(allowCredentials)
-                .maxAge(maxAge);
     }
 }
